5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1602_1017.log
== TEST (2019-03-29 14:29:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R = 6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:29:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R = 6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:29:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R = 6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:30:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R = float(6371.01)
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R = float(6371.01)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:30:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R =6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R =6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:30:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R =6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R =6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:31:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R =6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R =6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:31:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R = 6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:32:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R = 6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:39:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				 
R = 6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:40:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
R = 6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:40:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
				 
R = 6371.01
				 
distancia = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(distancia,2))

-- ERROR:
File "XXXX", line 12
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:41:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
				 
R = 6371.01
				 
DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 12
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:41:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
				 
R=6371.01
				 
DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 12
    R=6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:42:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
				 
R=6371.01
				 
DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 12
    R=6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:42:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
				 
R = 6371,01
				 
DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 12
    R = 6371,01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:42:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
				 
R = 6371.01
				 
DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 12
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:43:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
				 
      R = 6371.01
				 
DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 12
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:43:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
R = 6371.01
				 
DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:44:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
X = 6371.01
				 
DISTANCIA = X*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 11
    X = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:44:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
X = (6371.01)
				 
DISTANCIA = X*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 11
    X = (6371.01)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:44:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
X = int(6371.01)
				 
DISTANCIA = X*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 11
    X = int(6371.01)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:46:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
X = 6371.01)
				 
DISTANCIA = X*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 11
    X = 6371.01)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:46:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
X = 6371.01
				 
DISTANCIA = X*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 11
    X = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:47:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
R = 6371.01
print(R)
DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:53:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: "))
				
R = 6371.01

DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
File "XXXX", line 11
    R = 6371.01
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:53:25) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

ti = radians(float(input("latitude p2: ")))
g1 = radians(float(input("longitude p2: ")))
				
R = 6371.01

DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 't2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 14:54:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

t2 = radians(float(input("latitude p2: ")))
g2 = radians(float(input("longitude p2: ")))
				
R = 6371.01

DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 14:54:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude do p1: ")))

t2 = radians(float(input("latitude p2: ")))
g2 = radians(float(input("longitude p2: ")))
				
R = 6371.01

DISTANCIA = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
				 
print(round(DISTANCIA,2))

-- EXECUTION TIME:
0.203524
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
